--- a/404.html
+++ b/404.html
@@ -42,7 +42,7 @@
     }
 
     main.error .error-number text {
-      font-family: var(--fixed-font-family);
+      font-family: var(--ff-source-sans-pro);
     }
   </style>
   <link rel="stylesheet" href="/styles/lazy-styles.css">
