--- a/head.html
+++ b/head.html
@@ -2,4 +2,6 @@
 <script src="/scripts/lib-franklin.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
 <link rel="stylesheet" href="/styles/styles.css" />
+<link rel="stylesheet" href="/external-styles/header-clientCSSContent.css"/>
+<link rel="stylesheet" href="/external-styles/header-clientLSGCSSContent.css"/>
 <link rel="dns-prefetch" href="https://www.walgreens.com" />
