--- a/head.html
+++ b/head.html
@@ -4,4 +4,6 @@
 <link rel="stylesheet" href="/styles/styles.css" />
 <link rel="stylesheet" href="/external-styles/header-clientCSSContent.css"/>
 <link rel="stylesheet" href="/external-styles/header-clientLSGCSSContent.css"/>
+<!-- ?? do we need this CSS ? Footer looks good without it -->
+<!-- <link rel="stylesheet" href="/external-styles/footer-clientLSGCSSContent.css"/> -->
 <link rel="dns-prefetch" href="https://www.walgreens.com" />
