add gh action & favicon

--- a/head.html
+++ b/head.html
@@ -7,3 +7,4 @@
 <!-- ?? do we need this CSS ? Footer looks good without it -->
 <!-- <link rel="stylesheet" href="/external-styles/footer-clientLSGCSSContent.css"/> -->
 <link rel="dns-prefetch" href="https://www.walgreens.com" />
+<link rel="icon" href="/icons/favicon.ico" type="image/x-icon">
