add as to preload

--- a/head.html
+++ b/head.html
@@ -2,8 +2,8 @@
 <script src="/scripts/lib-franklin.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
 <link rel="stylesheet" href="/styles/styles.css" />
-<link rel="preload" href="/external-styles/header-clientCSSContent.css" />
-<link rel="preload" href="/external-styles/header-clientLSGCSSContent.css"/>
+<link rel="preload" href="/external-styles/header-clientCSSContent.css" as="style"/>
+<link rel="preload" href="/external-styles/header-clientLSGCSSContent.css" as="style"/>
 
 <link rel="stylesheet" href="/external-styles/header-clientCSSContent.css"/>
 <link rel="stylesheet" href="/external-styles/header-clientLSGCSSContent.css"/>
