--- a/head.html
+++ b/head.html
@@ -1,12 +1,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<script src="/scripts/lib-franklin.js" type="module"></script>
-<script src="/scripts/scripts.js" type="module"></script>
-<link rel="stylesheet" href="/styles/styles.css" />
-<link rel="preload" href="/external-styles/header-clientCSSContent.css" as="style"/>
-<link rel="preload" href="/external-styles/header-clientLSGCSSContent.css" as="style"/>
+<script src="/external-topic/scripts/lib-franklin.js" type="module"></script>
+<script src="/external-topic/scripts/scripts.js" type="module"></script>
+<link rel="stylesheet" href="/external-topic/styles/styles.css" />
+<link rel="preload" href="/external-topic/external-styles/header-clientCSSContent.css" as="style"/>
+<link rel="preload" href="/external-topic/external-styles/header-clientLSGCSSContent.css" as="style"/>
 
-<link rel="stylesheet" href="/external-styles/header-clientCSSContent.css"/>
-<link rel="stylesheet" href="/external-styles/header-clientLSGCSSContent.css"/>
+<link rel="stylesheet" href="/external-topic/external-styles/header-clientCSSContent.css"/>
+<link rel="stylesheet" href="/external-topic/external-styles/header-clientLSGCSSContent.css"/>
 <!-- ?? do we need this CSS ? Footer looks good without it -->
-<!-- <link rel="stylesheet" href="/external-styles/footer-clientLSGCSSContent.css"/> -->
+<!-- <link rel="stylesheet" href="/external-topic/external-styles/footer-clientLSGCSSContent.css"/> -->
 <link rel="dns-prefetch" href="https://www.walgreens.com" />
